apps/traefik/overlays/dev/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
spec:
  selector:
    app: traefik
  ports:
    - port: 8080
      targetPort: dashboard
