apps/traefik/overlays/dev/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - port: 8081
      name: web
      targetPort: 80
