apps/traefik/overlays/dev/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`cluster.traefik.local`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: traefik-dashboard-service
          port: 8080
